tests-system/union-type-wrong-type/output
parent = o1
         ^^ union-type-wrong-type/test.trlc:9: error: expected reference of type [TypeA, TypeB], but o1 is of type OtherType
Processed 1 model and 1 requirement file and found 1 error
